# entracte

./: .editorconfig  .gitattributes  .gitignore  .lycheecache  .prettierignore  .stylelintrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
.config/typedoc/: typedoc-theme.css  typedoc.json
.github/: AGENTS.md  COMMUNITY_LICENSES.md  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  praise.yml
.github/audit/: cspell.json  knip.json  lychee.toml
.github/audit/cspell/: project-words.txt
.github/workflows/: audit.yml  build-preview.yml  bump-cask.yml  ci.yml  docs-preview.yml  docs.yml  e2e.yml  release.yml
Casks/: entracte.rb
docs/: HOOKS.md  PLUGINS.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/architecture/: index.md  per-os.md  scheduler.md
docs/developer/: architecture-internals.md  contributing.md  cross-platform-testing.md  index.md  ipc.md  plugin-api-design.md  plugin-authoring.md  releases.md  rust-api.md  ts-api.md
docs/guide/: cli.md  getting-started.md  install.md  settings.md  supporter.md  why-breaks.bib  why-breaks.md
docs/legal/: privacy.md  terms.md
docs/public/: CNAME  _redirects
scripts/: audit-a11y-settings-fixture.json  audit-a11y.mjs  capture-screenshots.sh  encode-sounds.sh
src/: App.css  App.test.tsx  App.tsx  brand.css  error-boundary.test.tsx  error-boundary.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  deny.toml  rustdoc-header.html  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json  pause.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  camera.rs  chores_store.rs  cli.rs  config.rs  diagnostics.rs  dnd.rs  hooks.rs  ipc.rs  lib.rs  license_redact.rs  main.rs  media.rs  notifications.rs  pause_store.rs  platform.rs  plugin_store.rs  proc.rs  proc_match.rs  renderer_log.rs  screen_time_store.rs  secure_io.rs  stats.rs  supporter.rs  test_support.rs  tray.rs  updater.rs  video.rs  window.rs
src-tauri/src/plugins/: asset.rs  detect.rs  eval.rs  install.rs  manifest.rs  mod.rs  registry.rs  runtime.rs  signature.rs
src-tauri/src/scheduler/: break_stats.rs  chores.rs  content_pack.rs  exports.rs  hotkeys.rs  idle.rs  mod.rs  overlay.rs  overlay_watchdog.rs  pause.rs  routines.rs  run_loop.rs  screen_time.rs  session_lock.rs  settings.rs  timers.rs  tray_countdown.rs  types.rs
src-tauri/src/scheduler/commands/: backup.rs  breaks.rs  chores.rs  content_pack.rs  hooks.rs  mod.rs  plugins.rs  profiles.rs  settings.rs  stats.rs
src-tauri/src/scheduler/fixtures/: default_settings_flat.json
src-tauri/src/supporter/: manual.rs
src/assets/sounds/: CREDITS.md  credits.json
src/i18n/: LangProvider.test.tsx  LangProvider.tsx  catalog.ts  index.ts  registry.test.ts  registry.ts  translate.test.ts  translate.ts  types.ts
src/lib/: a11y.test.ts  a11y.ts  app-suggestions.test.ts  app-suggestions.ts  break-mode.test.ts  break-mode.ts  break-sound.ts  clock-list.test.ts  clock-list.ts  color.test.ts  color.ts  hook-templates.test.ts  hook-templates.ts  hotkeys.test.ts  hotkeys.ts  ipc-parity.test.ts  ipc.test.ts  ipc.ts  locale-format.test.ts  locale-format.ts  platform.test.ts  platform.ts  redact.test.ts  redact.ts  screen-time.test.ts  screen-time.ts  sounds.test.ts  sounds.ts  stats-format.test.ts  stats-format.ts  time.test.ts  time.ts  tray-countdown.test.ts  tray-countdown.ts  use-custom-stylesheet.test.ts  use-custom-stylesheet.ts  use-local-draft.test.ts  use-local-draft.ts  use-tauri-listen.test.ts  use-tauri-listen.ts  (+4 more)
src/test-fixtures/: audit-a11y-fixture.test.ts
src/views/: break-overlay.css  break-overlay.test.tsx  break-overlay.tsx  pause-picker.css  pause-picker.test.tsx  pause-picker.tsx
src/views/break-overlay/: breath.test.ts  breath.ts  chore-prompt.test.ts  chore-prompt.ts  postpone.test.ts  postpone.ts  routine.test.ts  routine.ts  schemas.test.ts  schemas.ts  skip-hint.test.ts  skip-hint.ts  sound-credit.test.tsx  sound-credit.tsx  themes-parity.test.ts  types.test.ts  types.ts  (+2 more)
(+102 files in other folders)
