[package]
name = "entracte"
version = "0.0.6"
description = "Cross-platform break reminder"
authors = ["Athanasia Mowinckel"]
license = "Apache-2.0"
repository = "https://github.com/drmowinckels/entracte"
edition = "2021"
default-run = "entracte"

# Mirror CI's `clippy -- -D warnings` so local `cargo clippy`/`cargo build`
# enforce the same gate. Item-level `#[allow(...)]` still overrides where a
# lint is deliberately suppressed.
[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[lib]
name = "entracte_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
log = "0.4"
rodio = { version = "0.22", default-features = false, features = [
    "playback",
    "mp3",
    "wav",
    "vorbis",
    "flac",
    "mp4",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
user-idle = "0.6"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
shell-words = "1"
getrandom = "0.2"
hex = "0.4"
subtle = "2"
ed25519-dalek = "2"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["zeroize_derive"] }
# Local-only plugin sandbox (#156). extism embeds wasmtime; modules run with
# no ambient authority (WASI disabled) and can only call host functions a
# granted capability registers. See docs/developer/plugin-api-design.md.
extism = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = ["Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_System_StationsAndDesktops", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Wdk_System_SystemServices"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSButton", "NSControl", "NSFont", "NSFontDescriptor", "NSAttributedString", "NSEvent", "NSGraphicsContext", "objc2-core-graphics"] }
objc2-foundation = { version = "0.3", features = ["NSAttributedString", "NSString", "NSDictionary", "NSArray", "NSValue", "NSGeometry"] }
objc2-core-graphics = { version = "0.3", features = ["CGEvent", "CGEventTypes"] }
core-graphics = "0.25"
core-foundation = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[dev-dependencies]
tempfile = "3"
mockito = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
# Compile WAT → wasm in-memory for plugin-runtime tests, so we don't commit
# binary fixtures or require the extism PDK toolchain in CI.
wat = "1"

# Enables `tauri::test::{mock_builder, mock_context, noop_assets, MockRuntime}`
# for the integration-test rig (`test_support::mock_app_with_scheduler`).
# Kept out of [dependencies] so the release binary doesn't carry the
# mock runtime, and target-gated off Windows because the `test` feature
# transitively pulls in `wry`/WebView2 bindings whose `WebView2Loader.dll`
# entry-point doesn't match the GitHub Actions Windows image — the test
# binary fails to load with `STATUS_ENTRYPOINT_NOT_FOUND`. Rig coverage
# still runs on macOS + Ubuntu, which is sufficient for these tests
# (they exercise OS-agnostic Scheduler / Tauri-event paths).
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
tauri = { version = "2", features = ["test"] }

